observability/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: grafana
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    # HTTP를 HTTPS로 자동 리다이렉트
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # cert-manager가 인증서를 자동으로 발급하도록 설정
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: haproxy
  # TLS 설정
  tls:
  - hosts:
    - grafana0213.kro.kr
    - www.grafana0213.kro.kr
    secretName: grafana-tls
  rules:
    - host: grafana0213.kro.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
    - host: www.grafana0213.kro.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
